# spectral-recovery

./: .gitignore  1p_test.gpkg  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  index.html  metrics_sandbox.py  mkdocs.yml  no_overlap.gpkg  not_fully_contained.gpkg  objects.inv  prep_data.py  pyproject.toml  requirements.txt  sitemap.xml  test.py  test.tif  test_200.gpkg  test_200.tif  test_500.gpkg  test_500.tif  test_poly.gpkg  test_raster.tif  test_recovered.tif  test_recovered_early.tif
.github/ISSUE_TEMPLATE/: bug_report.md  doc_report.md  feature_request.md
.github/workflows/: gh-pages.yaml  publish.yml  python-package.yml  tests.yml
api/: index.html
computing_with_dask/: index.html
docs/: About.md  about.md  api.md  basic_workflow.ipynb  computing_with_dask.md  getting_started_API.ipynb  getting_started_CLI.ipynb  index.md  indices.md  installation.md  overview.md  overview_API.ipynb  overview_CLI.ipynb  plotting.md  recovery_targets.md  spectral_recovery_tool.md  terminology.md  theoretical_basis.md  using_spectral_recovery.ipynb
docs/notebooks/: MEE_worked_example_32.ipynb  basic_workflow.ipynb  overview_API.ipynb  overview_CLI.ipynb
docs/stylesheets/: extra.css  mkdocstrings.css
docs/test_data/: import spectral_recovery as sr.py  test_restoration_polygon.gpkg  testy.py  wildfire_516.gpkg
html/spectral_recovery/: baselines.html  enums.html  index.html  indices.html  metrics.html  recovery_target.html  restoration.html  spectral_recovery.html  timeseries.html  trajectory.html  utils.html
indices/: index.html
installation/: index.html
notebooks/test_data/: wildfire_516.gpkg
overview/: index.html
plotting/: index.html
reading_in_data/: index.html
recovery_metrics/: index.html
recovery_targets/: index.html
search/: search_index.json
spectral-recovery/: baseline.py  baselines.py  enums.py  images.py  indices.py  metrics.py  multiband_yearly_stack.py  reference.py  restoration.py  restoration_area.py  spec_reco.py  spectral_recovery.py  spectralstack.py  utils.py
spectral-recovery/tests/: metrics_test.py  spec_reco.py
spectral_recovery/: baselines.py  enums.py  images.py  indices.py  metrics.py  metrics_playground.py  recovery_target.py  restoration.py  spectral_recovery.py  timeseries.py  trajectory.py  utils.py
spectral_recovery/io/: raster.py
spectral_recovery/scripts/: spectral_recovery.py
spectral_recovery/tests/: metrics_test.py  restoration_test.py  test_baselines.py  test_recovery_target.py  test_restoration.py
spectral_recovery_tool/: index.html
src/: spectral_recovery.py
src/data/: __init__.py
src/scripts/: cli.py  spectral_recovery.py
src/spectral_recovery/: __init__.py  _config.py  _utils.py  config.py  enums.py  indices.py  metrics.py  plotting.py  recovery_target.py  restoration.py  targets.py  timeseries.py  utils.py
src/tests/: test_indices.py  test_io.py  test_io_polygon.py  test_io_raster.py  test_metrics.py  test_spx.py  (+7 more)
stylesheets/: extra.css
terminology/: index.html
theoretical_basis/: index.html
(+102 files in other folders)
