[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral_recovery"
requires-python = ">=3.9"
authors = [
    {name = "Sarah Zwiep", email = "sarahvz@mail.ubc.ca"},
]
maintainers = [
  {name = "Sarah Zwiep", email = "sarahvz@mail.ubc.ca"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
version = "0.2.1b1"
dependencies = [
    "geopandas",
    "rioxarray",
    "rasterio",
    "xarray",
    "numpy",
    "pandas",
    "click",
    "dask",
    "distributed"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectral_recovery*", "scripts*"]
exclude = ["tests*"]

[project.scripts]
specrec = "scripts.cli:cli"
