[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral_recovery"
requires-python = ">=3.10"
authors = [
    {name = "Sarah Zwiep", email = "sarahvz@mail.ubc.ca"},
]
maintainers = [
  {name = "Sarah Zwiep", email = "sarahvz@mail.ubc.ca"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
version = "0.2.0b1"
dependencies = [
    "geopandas == 0.14.1",
    "rioxarray == 0.15.0",
    "rasterio == 1.3.9",
    "xarray == 2023.11.0",
    "numpy >= 1.26.2",
    "click == 8.1.7",
    "dask >= 2023.12.0",
    "distributed >= 2023.12.0",
    "matplotlib == 3.8.2",
    "seaborn == 0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest == 7.4.3",
    "pytest-mock == 3.12.0",
]
lint = [
    "pylint == 3.0.3",
    "black == 23.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectral_recovery*", "scripts*"]
exclude = ["tests*"]

[project.scripts]
specrec = "scripts.cli:cli"
